rust/tests/snapshots/adjacency_matrix_test__adjacency_matrix_basic.snap
---
source: tests/adjacency_matrix_test.rs
expression: snapshot
---
[
  [
    0.0,
    1.0,
    1.0
  ],
  [
    0.0,
    0.0,
    1.0
  ],
  [
    0.0,
    0.0,
    0.0
  ]
]
