rust/tests/snapshots/adjacency_matrix_test__adjacency_matrix_multiple_links.snap
---
source: tests/adjacency_matrix_test.rs
expression: snapshot
---
[
  [
    0.0,
    2.0
  ],
  [
    0.0,
    0.0
  ]
]
