rust/tests/snapshots/adjacency_matrix_test__adjacency_matrix_no_links.snap
---
source: tests/adjacency_matrix_test.rs
expression: snapshot
---
[
  [
    0.0,
    0.0,
    0.0
  ],
  [
    0.0,
    0.0,
    0.0
  ],
  [
    0.0,
    0.0,
    0.0
  ]
]
