rust/tests/snapshots/adjacency_matrix_test__adjacency_matrix_self_links.snap
---
source: tests/adjacency_matrix_test.rs
expression: snapshot
---
[
  [
    1.0,
    0.0
  ],
  [
    0.0,
    0.0
  ]
]
